tests/assets/entrypoints/invalid/empty_simple.py
# Empty module on purpose for invalid-entrypoint coverage.
